# rtipc-rust

./: Cargo.toml  README.md
doc/: flow.drawio
examples/: client.rs  rpc.rs  server.rs
examples/common/: mod.rs
src/: cache.rs  cache_env.rs  cache_linux.rs  channel.rs  error.rs  fd.rs  header.rs  lib.rs  protocol.rs  queue.rs  request.rs  resource.rs  shm.rs  socket.rs  unix.rs  unix_message.rs
