[package]
name = "rtipc"
version = "0.0.3"
edition = "2024"
description = "Real-Time IPC, based on a zero-copy, wait-free circular message queue implementation"
readme = "README.md"
repository = "https://github.com/mausys/rtipc-rust"
license = "MIT OR Apache-2.0"
keywords = ["ipc", "linux", "real-time"]
categories = ["concurrency"]

[dependencies]
nix = { version = "0.30.1", features = ["fs", "mman", "feature"] }
cache-size = {version = "0.7.0"}
log = {version = "0.4"}



